--- a/css/cpajobs.css
+++ b/css/cpajobs.css
@@ -2066,8 +2066,10 @@ a.grey-light-hover:hover {
   margin-left: 15px;
   margin-right: 15px;
 }
-.flex-mtrout {
-  margin-top: 24px;
+.flex-end {
+  display: flex;
+  justify-content: baseline;
+  align-items: flex-end;
 }
 /* Padding Classes */
 .flex-p0 {
@@ -6364,9 +6366,6 @@ a.flex-tab.active {
     float: none;
     margin-right: 0;
     width: 100%;
-  }
-  .flex-mtrout {
-    margin-top: 18px;
   }
   .candidate_keywords input[type=text] {
     display: block;
